# bundler

./: .commitlintrc.json  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc.json  .releaserc  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  aliases.js  azion.config.cjs  docker-compose.yml  e2e_results.json  eslint.config.js  eslint.config.mjs  jest-e2e.config.js  jest.config.e2e.js  jest.config.js  jest.config.ts  jest.config.unit.js  jest.global.setup.js  jsconfig.json  jsdoc.json  main.js  package-lock.json  package.json  pnpm-lock.yaml  release.config.js  releaserc.json  tsconfig.json  tsup.config.ts  vite.config.js
.changeset/: beige-pianos-count.md  config.json  lemon-books-read.md  tender-llamas-cheat.md
.github/: dependabot.yml
.github/workflows/: azioncli-test.yml  azioncli.yml  cla.yml  code-review.yml  jsdoc-generate.yml  major.yml  manual-cleanup.yml  minor.yml  osv-scanner-pr.yml  prereleases.yml  publish-jsdoc.yml  release-v5.3.x.yml  release.yml  test-e2e-reports.yml  test-e2e.yml  tests-e2e.yml  (+1 more)
.husky/: commit-msg  pre-commit
azion/: azion.json
docs/: handler-patterns.md  nextjs.md  nodejs-apis.md  overview.md  presets.md  publish-preset.md  release.md
examples/rust-wasm-yew-ssr/: Cargo.toml  README.md  vulcan.config.js
examples/rust-wasm-yew-ssr/src/: lib.rs
lib/: constants.ts  main.js  main.ts  types.ts  utils.test.ts  utils.ts
src/: index.js
tasks/: code-review.js  process-reports-e2e.js  process-reports-nodejs-apis.js  sync-aliases.js
(+1174 files in other folders)
