# You must change these to your own details.
[package]
name = "azion-rust-edge-function"
description = "My awesome Rust, WebAssembly and Webpack project running on Azion!"
version = "0.1.0"
authors = ["Luis Malheiro <luismalheiro@gmail.com>"]
categories = ["azion", "edge-function", "wasm", "rust"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
wasm-bindgen-futures = "0.4.34"
base64 = "0.21.0"
lazy_static = "1.4.0"
yew-macro = "0.20.0"
yew = { version ="0.20.0", features = [ "ssr"] }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "FetchEvent",
    "Headers",
    "Response",
    "Request",
    "Window"
]

